# my-service-bus

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  description.drawio  gulpfile.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  test.yml
JavaScript/: HtmlGraph.js  HtmlGraph.js.map  HtmlMain.js  HtmlMain.js.map  HtmlQueue.js  HtmlQueue.js.map  HtmlSessions.js  HtmlSessions.js.map  HtmlStatusBar.js  HtmlStatusBar.js.map  HtmlTopics.js  HtmlTopics.js.map  Iterators.js  Iterators.js.map  PlugIcon.js  PlugIcon.js.map  ServiceLocator.js  ServiceLocator.js.map  SubpagesWidget.js  SubpagesWidget.js.map  Utils.js  Utils.js.map  main.js  main.js.map
Typescript/: HtmlGraph.ts  HtmlMain.ts  HtmlQueue.ts  HtmlSessions.ts  HtmlStatusBar.ts  HtmlTopics.ts  Iterators.ts  PlugIcon.ts  ServiceLocator.ts  SubpagesWidget.ts  Utils.ts  contracts.d.ts  main.ts
proto/: MyServicePersistenceGrpcService.proto  bcl.proto
src/: errors.rs  main.rs  settings.rs
src/app/: app_ctx.rs  global_states.rs  initialization.rs  locks_registry.rs  logs.rs  mod.rs  process_id_generator.rs  prometheus_metrics.rs  shutdown.rs
src/background/: dead_subscribers_kicker.rs  gc_timer.rs  immediatly_persist_event_loop.rs  immediatly_persist_timer.rs  metrics_timer.rs  mod.rs  persist_topics_and_queues.rs
src/bcl_proto/: bcl_date_time_utils.rs  date_time.rs  mod.rs
src/date_time/: as_microseconds.rs  atomic_date_time.rs  date_time.rs  mod.rs  utils.rs
src/grpc/: mappers.rs
src/http/: errors.rs  files.rs  html.rs  http_ctx.rs  http_fail.rs  http_ok.rs  http_server.rs  mod.rs  query_string.rs  router.rs  start_up.rs  swagger.rs  url_utils.rs  web_content_type.rs
src/http/controllers/: builder.rs  connections.rs  connections_controller.rs  consts.rs  debug.rs  extensions.rs  home_controller.rs  logs.rs  metrics.rs  mod.rs  queues.rs  topics.rs
src/http/middlewares/: files.rs  mod.rs  static_files.rs  swagger.rs
src/message_pages/: messages_page.rs  messages_page_cache.rs  messages_page_data.rs  mod.rs
src/messages/: message.rs  mod.rs
src/messages_bucket/: bucket_page.rs  message_to_send_model.rs  messages_bucket.rs  mod.rs
src/messages_page/: messages_page.rs  messages_page_list.rs  messages_to_persist_bucket.rs  mod.rs  page_size_metrics.rs  sub_page_data.rs
src/metric_data/: metric_one_second.rs  metrics_history.rs  mod.rs
src/operations/: delivery.rs  delivery_confirmation.rs  fail_result.rs  gc_http_connections.rs  gc_message_pages.rs  gc_queues_with_no_subscribers.rs  get_active_sub_pages.rs  get_messages_to_persist_by_page.rs  get_next_messages_to_persist.rs  initialization.rs  load_page_and_try_to_deliver_again.rs  load_page_to_cache.rs  message_pages.rs  mod.rs  page_loader.rs  persist_topics_and_queues.rs  publisher.rs  queues.rs  save_messages_for_topic.rs  send_package.rs  sessions.rs  subscriber.rs
src/operations/delivery/: delivery.rs  delivery_dependency.rs  delivery_dependency_mock.rs  delivery_payloads_collector.rs  mod.rs  session_delivery_data.rs  subscriber_package_builder.rs
src/operations/page_loader/: load_page_to_cache.rs  mod.rs  operations.rs  page_loader.rs  utils.rs
src/persistence/: error.rs  messages_pages_grpc_repo.rs  messages_pages_mock_repo.rs  messages_pages_repo.rs  mod.rs  protobuf_models.rs  queue_snapshot_repo.rs  topics_and_queues_snapshot_grpc_repo.rs  topics_and_queues_snapshot_mock_repo.rs  topics_and_queues_snapshot_repo.rs  zip.rs
src/queue_subscribers/: mod.rs  queue_subscriber.rs  subscriber_metrics.rs  subscribers_list.rs
src/queues/: delivery_attempts.rs  delivery_bucket.rs  delivery_iterator.rs  mod.rs  queue.rs  queue_data.rs  queue_metrics.rs  queues_list.rs
src/sessions/: connection_metrics.rs  errors.rs  http_connection_data.rs  mod.rs  my_sb_session.rs  my_sb_session_data.rs  my_sb_session_metrics.rs  my_sb_session_statistic.rs  my_sb_session_subscriber_data.rs  session_connection.rs  sessions_list.rs  sessions_list_data.rs  test_connection_data.rs
src/subscribers/: mod.rs  subscriber.rs  subscriber_id_generator.rs  subscribers_list.rs
src/tcp/: connection.rs  dead_connections_detector.rs  dead_sockets_detector.rs  error.rs  icoming_packets.rs  incoming_packets.rs  mod.rs  send_to_socket_with_timeout.rs  socket_loop.rs  socket_reader.rs  tcp_contracts.rs  tcp_server.rs
src/tcp_contracts/: common_deserializers.rs  common_serializers.rs  deserializers.rs  mod.rs  packet_versions.rs  tcp_contract.rs  tcp_contract_to_string.rs
src/timers/: by_topic.rs  dead_subscribers_kicker.rs  gc_timer.rs  main.rs  message_pages_loader_and_gc.rs  metrics_timer.rs  mod.rs  no_subscribers_queues_gc.rs  persist.rs
src/topics/: mod.rs  topic.rs  topic_data.rs  topic_data_access.rs  topic_snapshot.rs  topics_list.rs  topics_metrics.rs
src/utils/: duration_utils.rs  from_str.rs  lazy_object.rs  min_message_id_calculator.rs  mod.rs  rw_locks.rs  stop_watch.rs  string_builder.rs
wwwroot/css/: site.css
wwwroot/js/: app.js  jquery.js
(+110 files in other folders)
