[package]
name = "my-service-bus"
version = "2.1.0-rc02"
authors = ["amigin <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-service-bus-shared = { branch = "0.1.1", git = "https://github.com/MyJetTools/my-service-bus-shared.git" }
my-service-bus-tcp-shared = { branch = "0.1.1-rc", git = "https://github.com/MyJetTools/my-service-bus-tcp-shared.git" }
my-tcp-sockets = { branch = "0.1.0", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
rust-extensions = { branch = "main", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-http-utils = { branch = "main", git = "https://github.com/MyJetTools/my-http-utils.git" }

tonic = { version = "0.6.1", features = ["tls", "tls-roots", "prost"] }

hyper = { version = "0.14.7", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
chrono = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "*"
base64 = "*"
zip = "*"
md5 = "*"
anyhow = "1.0.40"
futures-core = "*"
prost = "0.9.0"
prost-types = "0.9.0"
tokio-stream = "*"
async-trait = "*"
futures-util = "*"
tokio-signal = "*"
signal-hook = "*"
rand = "*"
sysinfo = "*"
prometheus = "0.13.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }


[build-dependencies]
tonic-build = { version = "0.6.0", features = ["prost"] }
